5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1638_2728.log
== TEST (2019-04-16 10:29:34) 
-- CODE:
km= float(input("quantos km?"))
car= input("qual o tipo de carro?")
if(car.upper()="A"):
	print(km/8)
if(car.upper()="B"):
	print(km/12)
-- ERROR:
File "XXXX", line 3
    if(car.upper()="A"):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:29:59) 
-- CODE:
km= float(input("quantos km?"))
car= input("qual o tipo de carro?")
if(car.upper()="A"):
	print(km/8)
if(car.upper()="B"):
	print(km/12)
-- EXECUTION TIME:
0.146418
-- ERROR:
  File "/home/codebench/codes/1638/2728/main.py", line 3
    if(car.upper()="A"):
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:29:59) 
-- CODE:
km= float(input("quantos km?"))
car= input("qual o tipo de carro?")
if(car.upper()="A"):
	print(km/8)
if(car.upper()="B"):
	print(km/12)
-- ERROR:
File "XXXX", line 3
    if(car.upper()="A"):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:30:12) 
-- CODE:
km= float(input("quantos km?"))
car= input("qual o tipo de carro?")
print(car.upper())
-- OUTPUT:
B
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:30:29) 
-- CODE:
km= float(input("quantos km?"))
car= input("qual o tipo de carro?")
if(car.upper()=="A"):
	print(km/8)
if(car.upper()=="B"):
	print(km/12)
-- OUTPUT:
5.416666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:30:36) 
-- CODE:
km= float(input("quantos km?"))
car= input("qual o tipo de carro?")
if(car.upper()=="A"):
	print(km/8)
if(car.upper()=="B"):
	print(km/12)
-- EXECUTION TIME:
0.161836
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.416666666666667
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.125
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:30:44) 
-- CODE:
km= float(input("quantos km?"))
car= input("qual o tipo de carro?")
if(car.upper()=="A"):
	print(km/8)
if(car.upper()=="B"):
	print(km/12)
-- OUTPUT:
5.416666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:30:51) 
-- CODE:
km= float(input("quantos km?"))
car= input("qual o tipo de carro?")
if(car.upper()=="A"):
	print(km/8)
if(car.upper()=="B"):
	print(km/12)
-- OUTPUT:
5.416666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:31:25) 
-- CODE:
km= float(input("quantos km?"))
car= input("qual o tipo de carro?")
if(car.upper()=="A"):
	print(round(km/8,2))
if(car.upper()=="B"):
	print(round(km/12,2))
-- EXECUTION TIME:
0.217844
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.42
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.12
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
